# saicms

./: .gitignore  Cargo.toml
.idx/: dev.nix
admin/: bun.lockb  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
admin/src/: style.css
admin/templates/: main_layout.hbs
config/: server.toml
src/: authentication.rs  config.rs  main.rs  middlewares.rs  template.rs
src/admin/: mod.rs  routes.rs
src/admin/auth/: account.rs  db.rs  mod.rs
src/db/: mod.rs
src/routes/: mod.rs
