[package]
name = "saicms"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["rc", "serde_derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
chrono = "0.4.38"
redb = "2.1.1"
password-auth = "1.0.0"
