[package]
name = "saicms"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["rc", "serde_derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
chrono = "0.4.38"
redb = "2.1.1"
salvo = { version = "0.69.0", features = [
    "acme",
    "concurrency-limiter",
    "force-https",
    "quinn",
    "rustls",
    "trailing-slash",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
eyre = "0.6.12"
serde-email = "3.0.1"
ulid = "1.1.3"
argon2 = "0.5.3"
bincode = "1.3.3"
